Developer/src/objects/DistrictMaster__c.object
<CustomObject>
    <fields>
        <fullName>CityKanji__c</fullName>
        <label>市区町村名(漢字)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>市区町村名</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldZipCode__c</fullName>
        <label>(旧)郵便番号(5桁)</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrefectureKanji__c</fullName>
        <label>都道府県名(漢字)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefecture__c</fullName>
        <label>都道府県名</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubCityKanji__c</fullName>
        <label>町域名(漢字)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubCity__c</fullName>
        <label>町域名</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>郵便番号(7桁)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>地域マスタ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ZipCode__c</columns>
        <columns>OldZipCode__c</columns>
        <columns>City__c</columns>
        <columns>CityKanji__c</columns>
        <columns>SubCity__c</columns>
        <columns>SubCityKanji__c</columns>
        <columns>Prefecture__c</columns>
        <columns>PrefectureKanji__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>全国地方公共団体コード</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>